# tarweb

./: .clang-format  .gitignore  Cargo.toml  LICENSE  Makefile.am  README.md  build.rs  configure.ac  deny.toml  sniconfig.conf
.github/workflows/: rust.yml
benchmark/: README.md  bench-client.sh  more_writev_system.txt  writev_sendfile_cpu.plot
example-configs/: minimal.conf  tarweb-on-the-side.conf  this-and-that.conf
extra/: pre-commit
old-cpp-epoll/: bootstrap.sh
old-cpp-epoll/benchmark/: bench-server.sh  more_sendfile_system.txt  more_sendfile_user.txt  more_writev_user.txt
old-cpp-epoll/src/: cast.h  handshaker.cc  tarweb_test.cc  tls.h
proto/: sni_config.proto
rust/: Cargo.toml  README.md
rust/src/: main.rs
src/: archive.rs  datefmt.rs  handshaker.h  lib.rs  main.cc  main.rs  privs.rs  sock.rs  tarweb.cc  tarweb_test.cc  tls.cc  tls.h  writer.h
src/sni/: sni.rs
tests/: tartest.rs
tickbox/bump_version/: 20-version.sh  60-e2e-tests.sh
tickbox/pre-commit/: 24-deny.sh  25-build.sh  27-nightly-clippy.sh
