[package]
name = "tarweb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
# Not sure why I need to have the zeroize feature *and* dependency.
# The feature doesn't seem to add anything.
arrayvec = { version = "0.7.6", features = ["zeroize"]}
boring = "4.14.0"
clap = { version = "4.5.27", features = ["derive"] }
core_affinity = "0.8.1"

# bindgen and overwrite are needed on the StarFive VisionFive V2.
# io-uring = { version = "0.7.3", features = ["bindgen", "overwrite"] }
# io-uring = {path="vendor/io-uring"}
io-uring = {git = "https://github.com/ThomasHabets/io-uring.git", branch="setsockopt", features = ["bindgen", "overwrite"] }
ktls = "6.0.2"
lazy_static = "1.5.0"
libc = "0.2.169"
log = "0.4.25"
memmap2 = "0.9.5"
nix = { version = "0.29.0", features = ["feature"]}
rtsan-standalone = "0.1.0"
rustls = "0.23.25"
rustls-pemfile = "2.2.0"
stderrlog = "0.6.0"
tar = "0.4.43"
zeroize = { version = "1.8.1", features = ["simd"] }

[features]
rtsan = ["rtsan-standalone/enable"]
