[package]
name = "tarweb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
# Not sure why I need to have the zeroize feature *and* dependency.
# The feature doesn't seem to add anything.
arrayvec = { version = "0.7.6", features = ["zeroize"]}
boring = "4.14.0"
clap = { version = "4.5.27", features = ["derive"] }
core_affinity = "0.8.1"

# Need at least 0.7.5 for setsockopt support.
# Cannot use feature "bindgen" because it requires too modern headers for debian
# stable.
io-uring = "0.7.5"

# Need at least 6.0.2 for public CryptoInfo.as_ptr().
ktls = "6.0.2"
libc = "0.2.169"
log = "0.4.25"
memmap2 = "0.9.5"
nix = { version = "0.29.0", features = ["feature"]}
rtsan-standalone = "0.1.0"
rustls = { version = "0.23.25", features = ["prefer-post-quantum"] }
rustls-pemfile = "2.2.0"
stderrlog = "0.6.0"
tar = "0.4.43"
zeroize = { version = "1.8.1", features = ["simd"] }

[features]
# Not supported on riscv64
#rtsan = ["rtsan-standalone/enable"]

[profile.release]
debug = true
