[package]
name = "tarweb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
# Not sure why I need to have the zeroize feature *and* dependency.
# The feature doesn't seem to add anything.
arrayvec = { version = "0.7", features = ["zeroize"]}
boring = "4"
clap = { version = "4", features = ["derive"] }
core_affinity = "0.8"
httpdate = "1"

# Need at least 0.7.5 for setsockopt support.
# Cannot use feature "bindgen" because it requires too modern headers for debian
# stable.
io-uring = "0.7"

# Need at least 6.0.2 for public CryptoInfo.as_ptr().
ktls = "6"
libc = "0.2"
# memmap2 should be at least 0.9.9 to be 128bit safe.
memmap2 = "0.9.9"
nix = { version = "0.29", features = ["feature", "uio", "socket"] }
rayon = "1"
rtsan-standalone = "0.1"
rustls = { version = "0.23", features = ["prefer-post-quantum"] }
rustls-pemfile = "2"
sha3 = "0.10"
stderrlog = "0.6"
tar = "0.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }
zeroize = { version = "1", features = ["simd"] }

[features]
# Not supported on riscv64
#rtsan = ["rtsan-standalone/enable"]

[profile.release]
debug = true

[[bin]]
name = "sni_router"
path = "src/sni/sni.rs"

[lib]
name = "tarweb"
path = "src/lib.rs"
