[package]
name = "tarweb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
arrayvec = "0.7.6"
clap = { version = "4.5.27", features = ["derive"] }
core_affinity = "0.8.1"

# bindgen and overwrite are needed on the StarFive VisionFive V2.
io-uring = { version = "0.7.3", features = ["bindgen", "overwrite"] }
libc = "0.2.169"
log = "0.4.25"
memmap2 = "0.9.5"
nix = { version = "0.29.0", features = ["feature"]}
rtsan-standalone = "0.1.0"
stderrlog = "0.6.0"
tar = "0.4.43"
zeroize = "1.8.1"

[features]
rtsan = ["rtsan-standalone/enable"]
